--- a/style.css
+++ b/style.css
@@ -19,7 +19,120 @@
   --Black: hsl(0, 0%, 7%);
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
+  max-width: 100vw;
+  height: 100vh;
+}
+
+p {
+  font-size: 1.8rem;
+}
+
+img {
+  display: block;
+  width: 30%;
+  height: auto;
+}
+
+.container {
+  padding: 10rem;
+  max-width: 100%;
+  background-color: #c9a9a9;
+  height: 100%;
+}
+
+.grid-container {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+
+.grid-item {
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.grid-item-1 {
+  background-color: var(--Purple-500);
+  grid-column: 3 / 7;
+  grid-row: span 4;
+
+  text-align: center;
+
+  align-items: center;
+  padding: 6rem 3rem;
+}
+
+h1 {
+  font-size: 5rem;
+  font-weight: 500;
+  color: var(--White);
+}
+
+.img-star {
+  width: 40%;
+}
+
+.grid-item-1 span:first-of-type {
+  color: var(--Yellow-500);
+}
+
+span {
+  font-style: italic;
+}
+
+.grid-item-2 {
+  background-color: #fff;
+  grid-column: 3 / 5;
+  grid-row: 5 / 8;
+}
+
+.grid-item-3 {
+  background-color: var(--Yellow-500);
+  grid-column: 5 / 7;
+  grid-row: 5 / 8;
+}
+
+.grid-item-4 {
+  background-color: var(--Purple-100);
+  grid-column: 7 / 9;
+  grid-row: 1 / 8;
+}
+
+.grid-item-5 {
+  background-color: var(--Purple-500);
+  grid-column: 5 / -1;
+  grid-row: 8 / -1;
+}
+
+.grid-item-6 {
+  background-color: var(--White);
+  grid-column: 3 / 5;
+  grid-row: 8 / -1;
+}
+
+.grid-item-7 {
+  background-color: var(--Yellow-100);
+  grid-column: 1 / 3;
+  grid-row: 1 / 6;
+}
+
+.grid-item-8 {
+  background-color: var(--Yellow-500);
+  grid-column: 1 / 3;
+  grid-row: 6 / -1;
 }
